adjusting height to make sure it fits on smaller screens

--- a/main/new.css
+++ b/main/new.css
@@ -289,7 +289,7 @@ margin-left: 10%;
         right: 0;
         opacity: 0.8;
         z-index: -1;
-        height: 150em;
+        height: 90em;
     }
 
     .nav-bar{
